[package]
name = "questdb-rs"
version = "7.0.0"
edition = "2024"
license = "Apache-2.0"
description = "QuestDB Client Library for Rust"
homepage = "https://questdb.com/"
repository = "https://github.com/questdb/c-questdb-client"
keywords = ["questdb", "ilp", "client-library"]
categories = ["database"]
authors = ["Adam Cimarosti <adam@questdb.io>"]

[package.metadata.docs.rs]
features = ["almost-all-features", "arrow", "polars"]

[lib]
name = "questdb"
crate-type = ["lib"]

[dependencies]
libc = "0.2"
socket2 = { version = "0.6.1", optional = true }
dns-lookup = "3.0.0"
base64ct = { version = "1.7", features = ["alloc"] }
ryu = { version = "1.0" }
itoa = "1.0"
# Used in the QWP egress decoder for zero-copy slicing of frame
# payloads. Pulled in transitively via the `_egress` feature so a
# sender-only build (`--no-default-features --features sync-sender`)
# does not download or compile this crate.
bytes = { version = "1.7", optional = true }
log = "0.4"
aws-lc-rs = { version = "1.13", optional = true }
ring = { version = "0.17.14", optional = true }
rustls-pki-types = "1.12.0"
rustls = { version = "0.23.25", default-features = false, features = ["logging", "std", "tls12"] }
rustls-native-certs = { version = "0.8.2", optional = true }
webpki-roots = { version = "1.0.3", default-features = false, optional = true }
chrono = { version = "0.4.40", optional = true }

# We need to limit the `ureq` version to 3.0.x since we use
# the `ureq::unversioned` module which does not respect semantic versioning.
ureq = { version = "3.1.2, <3.2.0", default-features = false, optional = true }
serde_json = { version = "1", optional = true }
questdb-confstr = "0.1.1"
rand = { version = "0.9.0", optional = true }
ndarray = { version = "0.16", optional = true }
rust_decimal = { version = "1.38.0", optional = true }
bigdecimal = { version = "0.4.8", optional = true }
crc32c = "0.6"
memmap2 = "0.9"

# Java KeyStore readers. Pulled in only for the QWP transports
# (ingress qwp-ws and egress reader) when `tls_roots_password` is
# used to unlock a JKS/PKCS#12 trust store. Other ILP transports
# stick to PEM (rustls' native input).
#
# `jks` ships with its own PKCS#12 support via the (pre-release)
# `p12-keystore` 0.3 line, which is currently broken in the lock
# (`from_pkcs12` ABI mismatch). Turn that off and bind PKCS#12
# directly through the stable `p12-keystore` 0.2.x.
jks = { version = "0.3", default-features = false, optional = true }
p12-keystore = { version = "0.2", optional = true }

zstd = { version = "0.13", optional = true }

# Apache Arrow integration. `ffi` feature enables Arrow C Data Interface
# export. Pinned to a single major to match DataFusion's current major;
# bump deliberately per release notes.
arrow = { version = ">=58, <60", optional = true, default-features = false, features = ["ffi"] }
# 64-byte aligned allocations for build-pass Arrow buffers (validity,
# BOOLEAN bit-pack, ARRAY offsets, SYMBOL union dict).
aligned-vec = { version = "0.6", optional = true }
# `dtype-datetime` + `timezones` are required for the egress
# `Series::from_arrow` path: every QuestDB table has a designated
# TIMESTAMP, which the decoder maps to the tz-aware Arrow
# `Timestamp(Microsecond, Some("UTC"))`. Without these, materialising a
# real result set into a polars `DataFrame` (`fetch_all_polars` /
# `next_polars` / `iter_polars`) fails at runtime on the timestamp
# column. `dtype-date` covers QuestDB DATE columns symmetrically.
#
# Range 0.52–0.54 (in lockstep with polars-arrow): polars renames APIs at
# every 0.x minor, so the source deliberately uses only the subset stable
# across this range (`DataFrame::new`, `select_at_idx`, the `Categories`
# categorical surface) instead of per-release names like `new_with_height` /
# `get_columns`. CI exercises 0.52, 0.53 and 0.54. `questdb-rs/Cargo.lock` is
# gitignored, so the `<0.55` ceiling keeps an unrelated build from floating
# onto an untested polars.
polars = { version = ">=0.52, <0.55", optional = true, default-features = false, features = ["dtype-categorical", "dtype-datetime", "dtype-date", "timezones"] }
polars-arrow = { version = ">=0.52, <0.55", optional = true, default-features = false, features = ["compute"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

[build-dependencies]
serde_json = { version = "1.0.108" }
serde = { version = "1.0.193", features = ["derive"] }
slugify = "0.1.0"
indoc = "2"

[dev-dependencies]
# Pulled in transitively by `arrow-array`; named explicitly here so unit
# tests under `ingress::arrow::tests` can build `Float16Array` payloads.
half = "2"
socket2 = "0.6.1"
mio = { version = "1", features = ["os-poll", "net"] }
chrono = "0.4.31"
tempfile = "3"
webpki-roots = "1.0.1"
rstest = "0.26.1"
proptest = "1.6.0"
tungstenite = { version = "0.27", default-features = false, features = ["handshake"] }
ureq = { version = "3.1.2, <3.2.0", default-features = false }
# Bench harness for `benches/decoder.rs`. `default-features=false` skips
# `rayon` (criterion's parallel sample analyser) — the bench runs
# sequentially anyway and skipping rayon cuts the dev-dep tree.
criterion = { version = "0.5", default-features = false }

[features]
default = ["sync-sender", "sync-reader", "tls-webpki-certs", "ring-crypto"]

## Reliable, connection-oriented senders: ILP/TCP + ILP/HTTP + QWP/WS.
## QWP/UDP is intentionally excluded: it is best-effort (no acks, no auth,
## no TLS) and must be opted into explicitly via `sync-sender-qwp-udp`.
sync-sender = [
    "sync-sender-tcp",
    "sync-sender-http",
    "sync-sender-qwp-ws",
]

## QWP/WebSocket egress reader (queries). The read-side counterpart to
## `sync-sender` and, like it, on by default — querying is first-class,
## not opt-in. Bundles the WebSocket reader with zstd decompression so
## results from a compressing server decode out of the box.
sync-reader = [
    "sync-reader-qwp-ws",
    "sync-reader-zstd",
]

## Sync ILP/TCP
sync-sender-tcp = ["_sync-sender", "_sender-tcp", "dep:socket2"]

## Sync ILP/HTTP
sync-sender-http = [
    "_sync-sender",
    "_sender-http",
    "dep:ureq",
    "dep:serde_json",
    "dep:rand",
]

## Sync QWP/UDP — best-effort datagram ingest: no acknowledgements, no
## authentication, no TLS; datagrams may be dropped. Standalone and opt-in,
## deliberately NOT pulled in by `sync-sender` or the default build.
sync-sender-qwp-udp = ["_sync-sender", "_sender-qwp-udp", "dep:socket2"]

## Sync QWP/WebSocket
sync-sender-qwp-ws = ["_sync-sender", "_sender-qwp-ws", "dep:rand", "dep:socket2", "_keystore-roots"]

## Allow use OS-provided root TLS certificates
tls-native-certs = ["dep:rustls-native-certs"]

## Allow use of the `webpki-roots` crate to validate TLS certificates.
tls-webpki-certs = ["dep:webpki-roots"]

## Use `aws-lc-rs` as the cryto library.
aws-lc-crypto = [
    "dep:aws-lc-rs",
    "rustls/aws-lc-rs",
]

## Use `ring` as the crypto library.
ring-crypto = [
    "dep:ring",
    "rustls/ring",
]

## Allow skipping verification of insecure certificates.
insecure-skip-verify = []

## Enable rustls' `KeyLogFile`. When enabled, the client honors the
## `SSLKEYLOGFILE` environment variable and writes per-session TLS
## secrets to that path — letting Wireshark / tshark decrypt captures.
## Off by default: an attacker with write access to the user's
## environment (CI matrix, debug shell, container env, systemd unit)
## could otherwise siphon secrets without any in-process opt-in.
tls-key-log = []

## Enable code-generation in `build.rs` for additional tests.
json-tests = ["bigdecimal"]

## Enable methods to create timestamp objects from chrono::DateTime objects.
chrono-timestamp = ["dep:chrono"]

## Enable n-dimensional array columns from `ndarray::ArrayView` / `Array`.
ndarray = ["dep:ndarray"]

## Enable serialization of rust_decimal::Decimal in ILP
rust_decimal = ["dep:rust_decimal"]

## Enable serialization of bigdecimal::BigDecimal in ILP
bigdecimal = ["dep:bigdecimal"]

## Sync QWP egress reader over WebSocket (plain `ws://`). Does NOT
## pull in `sync-reader-zstd`: zstd is opt-in. Without it, the decoder
## still compiles but rejects `FLAG_ZSTD` batches at runtime with an
## `UnsupportedServer` error.
sync-reader-qwp-ws = ["_egress", "_keystore-roots"]

## Decompression for `FLAG_ZSTD` `RESULT_BATCH` payloads.
sync-reader-zstd = ["_egress", "dep:zstd"]

## Apache Arrow integration, split by direction so single-direction builds
## stay lean; `arrow` is the convenience umbrella over both. Each direction
## pulls only its own transport (`arrow-ingress` the QWP/WS sender,
## `arrow-egress` the QWP/WS reader); the shared Arrow deps live in `_arrow`.
##   arrow-egress : streaming Cursor → RecordBatchReader (read path)
##   arrow-ingress: RecordBatch → Buffer (write path)
## See `doc/QUESTDB_ARROW_INTEGRATION_DESIGN.md`.
## Egress enables `arrow/chrono-tz` because it types every designated
## timestamp as `Timestamp(_, Some("UTC"))`: without chrono-tz, consumer-side
## formatting, casts, and temporal kernels fail at runtime on the named zone.
arrow-egress = ["_arrow", "sync-reader-qwp-ws", "arrow?/chrono-tz"]
arrow-ingress = ["_arrow", "sync-sender-qwp-ws"]
arrow = ["arrow-ingress", "arrow-egress"]

## Polars integration, split by direction; `polars` is the umbrella.
##   polars-egress : Cursor → polars DataFrame
##   polars-ingress: polars DataFrame → Buffer
polars-egress = ["_polars", "arrow-egress"]
polars-ingress = ["_polars", "arrow-ingress"]
polars = ["polars-ingress", "polars-egress"]

## Run integration tests against a real QuestDB server launched from the
## `questdb/` submodule. Requires JDK 25 + Maven and a built jar at
## `../questdb/core/target/questdb-*-SNAPSHOT.jar`.
live-server-tests = [
    "sync-reader-qwp-ws",
    "sync-reader-zstd",
    "sync-sender-http",
    "sync-sender-qwp-ws",
]

## FFI escape-hatch surface, consumed only by the `questdb-rs-ffi` C-ABI
## crate. Exposes the hidden `questdb::ffi_support` module: owned
## (lifetime-free) pool handles and the entry points that mint them, which
## C / Python cannot express as Rust lifetimes. NOT for normal Rust users —
## they get the lifetime-bound `QuestDb::borrow_sender` / `borrow_reader`.
## Hidden from docs and exempt from
## semver; do not depend on it from regular Rust code.
ffi-support = ["sync-sender-qwp-ws"]

# Hidden derived features, used in code to enable-disable code sections. Don't use directly.
_sender-tcp = []
_sender-http = []
_sender-qwp-udp = []
_sender-qwp-ws = []
_sync-sender = []
_egress = ["dep:bytes"]
_keystore-roots = ["dep:jks", "dep:p12-keystore"]
# Shared Arrow / Polars dependency bundles, enabled by both directional
# features. Don't use directly.
_arrow = ["dep:arrow", "dep:aligned-vec", "dep:bytes"]
_polars = ["dep:polars", "dep:polars-arrow"]

## Enable all cross-compatible features.
## The `aws-lc-crypto` and `ring-crypto` features are mutually exclusive,
## thus compiling with `--all-features` will not work.
## Instead use `--features almost-all-features`.
## This is useful for quickly running `cargo test` or `cargo clippy`.
##
## Excludes `arrow` / `polars`: those are opt-in. CI runs them separately
## via `cargo test --features almost-all-features,arrow,polars`.
almost-all-features = [
    "sync-sender",
    "sync-sender-qwp-udp",
    "sync-reader-qwp-ws",
    "sync-reader-zstd",
    "tls-webpki-certs",
    "tls-native-certs",
    "ring-crypto",
    "insecure-skip-verify",
    "json-tests",
    "chrono-timestamp",
    "ndarray",
    "rust_decimal",
    "bigdecimal",
]

[[example]]
name = "basic"
required-features = ["sync-sender-tcp", "chrono-timestamp", "ndarray"]

[[example]]
name = "auth"
required-features = ["sync-sender-tcp", "chrono-timestamp"]

[[example]]
name = "auth_tls"
required-features = ["sync-sender-tcp", "chrono-timestamp"]

[[example]]
name = "from_conf"
required-features = ["sync-sender-tcp"]

[[example]]
name = "from_env"
required-features = ["_sync-sender"]

[[example]]
name = "http"
required-features = ["sync-sender-http", "ndarray", "rust_decimal"]

[[example]]
name = "protocol_version"
required-features = ["sync-sender-http", "ndarray", "bigdecimal"]

[[example]]
name = "qwp_egress_latency"
required-features = ["sync-reader-qwp-ws"]

[[example]]
name = "qwp_egress_failover"
required-features = ["sync-reader-qwp-ws"]

[[example]]
name = "qwp_egress_read"
required-features = ["sync-reader-qwp-ws", "sync-sender-http"]

[[example]]
name = "qwp_egress_read_wide"
required-features = ["sync-reader-qwp-ws", "sync-sender-http"]

[[example]]
name = "qwp_egress_hits"
required-features = ["sync-reader-qwp-ws"]

[[example]]
name = "qwp_ws_unified_sfa_bench"
required-features = ["sync-sender-qwp-ws", "arrow-ingress"]

# Synthetic equities L1 quote feed → QuestDB via the column-major
# sender. End-to-end throughput sanity check against a real server.
[[example]]
name = "qwp_ws_l1_quotes"
required-features = ["sync-sender-qwp-ws"]

[[example]]
name = "polars"
required-features = ["polars", "sync-sender-qwp-ws"]

# Step 3 (doc/historical/QWP_DATAFRAME_BENCH_PLAN.md §6) — Rust Polars ingress parity
# on the S1 narrow schema. Measures flush_polars_dataframe() e2e + the
# column-sender encode floor and emits the §3.2 JSON metric contract
# (client="rust-polars", direction="ingress"). Uses ureq for the DEDUP
# table create + WAL count gate, hence sync-sender-http. Run with:
#
#   cargo run --release --example qwp_ingress_polars \
#       --features polars,sync-sender-qwp-ws,sync-sender-http
[[example]]
name = "qwp_ingress_polars"
required-features = ["polars", "sync-sender-qwp-ws", "sync-sender-http"]

# Step 3 (§6) — Rust Polars egress parity on S1. Reads the table back via
# fetch_all_polars / iter_polars / next_polars and reports decode vs
# assemble vs the honest decode_plus_assemble sum, emitting the §3.2 JSON
# (direction="egress"). Run with:
#
#   cargo run --release --example qwp_egress_polars \
#       --features polars,sync-reader-qwp-ws,sync-sender-http
[[example]]
name = "qwp_egress_polars"
required-features = ["polars", "sync-reader-qwp-ws", "sync-sender-http"]

# Decoder microbenchmark anchoring the perf claims from commits
# `8ec0a85` (zero-copy decode) and `1163d43` (tighter SYMBOL/VARCHAR
# decode hot paths). Run with:
#
#   cargo bench --features sync-reader-qwp-ws --bench decoder
#
# The default row count (configurable via `QUESTDB_BENCH_ROWS`) is
# below the per-batch wire cap so the bench iterates fast on CI; set
# `QUESTDB_BENCH_ROWS=1000000` to reproduce the PR's 1M-row-per-batch
# workload directly.
[[bench]]
name = "decoder"
harness = false
required-features = ["sync-reader-qwp-ws"]

# Columnar payload hot-path bench. Anchors the encoder floor in
# `doc/QWP_UNIFIED_SENDER_M0_BASELINE.md` (memcpy-bound no-null path and
# referenced-only symbol intern). Run with:
#
#   cargo bench --features sync-sender-qwp-ws --bench column_sender
#   QUESTDB_COLUMN_BENCH_ROWS=10000000 cargo bench --features sync-sender-qwp-ws --bench column_sender
[[bench]]
name = "column_sender"
harness = false
required-features = ["sync-sender-qwp-ws"]

[profile.dev.package."*"]
debug = false

[profile.test.package."*"]
debug = false
