[project]
name = "c-questdb-client-enterprise-e2e"
version = "0.1.0"
description = "End-to-end tests that drive c-questdb-client sidecar bindings against a real QuestDB Enterprise primary."
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "pytest-randomly>=3.15",
    "psycopg[binary]>=3.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    # Top-level marker for every test that drives a c-questdb-client
    # binding's sidecar. The dispatched Enterprise CI selects with
    # `-m c_client`. Each test ALSO carries a sub-binding marker
    # (`c_client_rust`, `c_client_c`, `c_client_cpp`) so a single
    # binding can be exercised in isolation when iterating.
    "c_client: tests driving any c-questdb-client binding sidecar",
    "c_client_rust: c-questdb-client Rust binding subset",
    "c_client_c: c-questdb-client C binding subset (no tests yet)",
    "c_client_cpp: c-questdb-client C++ binding subset (no tests yet)",
    # Randomized fuzz (slower; separate cadence). Deliberately NOT also
    # tagged `c_client`, so the deterministic `-m c_client` CI selection
    # skips it -- mirroring the Enterprise harness, where fuzz runs via
    # `-m fuzz` rather than in the PR pipeline. Run with
    # `-m "c_client_rust and fuzz"`.
    "fuzz: randomized fuzz tests (slower; run on a separate cadence)",
]
log_cli = true
log_cli_level = "INFO"
