[package]
name = "tls_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
tokio-rustls = "0.23.4"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
argh = "0.1.7"
