[package]
name = "tls_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
argh = "0.1.12"
